--- a/apworlds.html
+++ b/apworlds.html
@@ -40,7 +40,6 @@
                 <header>
                     <h1 style="padding-top:20px">Archipelago News</h1>
                     <p>
-                        <a href="index.html">News</a> (<a href="feed.xml">Atom Feed</a>)<br/>
                         <a href="apworlds.html">APWorlds</a><br /><br />
 
                         News Archive <a href="archive2024.html">2024</a>
@@ -557,6 +556,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Client</strong> [<a href="http://clique.pharware.com/">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/ScipioWright/Clique-PopTracker/releases/latest">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Clique/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090815835825774683">Link</a>]</li>
                 </ul>
@@ -776,7 +776,7 @@
                 <h3><span id="FreddyFazbearsPizzeriaSimulator"></span> Freddy Fazbear's Pizzeria Simulator (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1270457637968019478">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1271559222232092794">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
@@ -1051,6 +1051,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/LittlestCube/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Majoras-Mask-AP-PopTracker-Pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/blob/master/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1064439510806564925">Link</a>]</li>
                 </ul>
@@ -1750,9 +1751,9 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
-                    <li><strong>Beta APWorld</strong> 0.5.0 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> 6.1.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> 6.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> 0.5.1 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> 7.0.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/NewSoupVi/witness_archipelago_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Witness/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/980554001231786014">Link</a>]</li>
@@ -1771,9 +1772,9 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Combat Logic + Logic Options - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1261741077119897661">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
-                    <li><strong>Alternate APWorld + Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1264316097419808829">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> Logic and ER Options - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1271979717246980217">Link</a>]</li>
+                    <li><strong>Alternate APWorld + Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1272035268144271430">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
                     <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
