--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         </style>
 
         <link rel="icon" type="image/gif" href="favicon.gif"/>
-        <link rel="alternate" type="application/atom+xml" title="Feed" href="https://multiworld.news/feed.xml">
     </head>
 
     <body>
@@ -39,19 +38,69 @@
                 <header>
                     <h1 style="padding-top:20px">Archipelago News</h1>
                     <p>
-                        <a href="index.html">News</a> (<a href="feed.xml">Atom Feed</a>)<br/>
                         <a href="apworlds.html">APWorlds</a><br /><br />
 
                         News Archive <a href="archive2024.html">2024</a>
                     </p>
                 </header>
 
-                <h2 id="D20240808">August 8, 2024</h2>
+                <h2 id="D20240811">August 11, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240810">August 10, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>New Beta APWorld</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>New Beta Game Mod</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240809">August 9, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Freddy Fazbear's Pizzeria Simulator [<a href="apworlds.html#FreddyFazbearsPizzeriaSimulator">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X2 [<a href="apworlds.html#MegaManX2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -66,8 +115,38 @@
                     <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
                 </ul>
 
+                <h2 id="D20240808">August 8, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Freddy Fazbear's Pizzeria Simulator [<a href="apworlds.html#FreddyFazbearsPizzeriaSimulator">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Tyrian [<a href="apworlds.html#Tyrian">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Tyrian [<a href="apworlds.html#Tyrian">Link</a>]</li>
+                </ul>
+
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240807">August 7, 2024</h2>
