--- a/apworlds.html
+++ b/apworlds.html
@@ -46,7 +46,7 @@
                     </p>
 
                     <p>
-                        <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1HZvn4wSjb633Uxu2o8oHambwP0aAax4XnADidn3xs3g/edit#gid=58422002">Community-Maintained Google Sheet</a>
+                        <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
                     </p>
                 </header>
 
@@ -776,7 +776,7 @@
                 <h3><span id="FreddyFazbearsPizzeriaSimulator"></span> Freddy Fazbear's Pizzeria Simulator (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1271559222232092794">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1272316993558679736">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
@@ -1627,6 +1627,7 @@
                 <h3><span id="Subversion"></span> Subversion (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
+                    <!-- <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1272558504695173132">Link</a>]</li> -->
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1257407054180782080">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1160264628614484089">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1146853510378422272">Link</a>]</li>
@@ -1764,6 +1765,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Jarno458/TsRandomizer/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/893636303630000169/1272273047801303154">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Timespinner/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/893636303630000169">Link</a>]</li>
                 </ul>
