--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (190)</h2>
+                <h2>APWorlds (192)</h2>
 
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ALinkToThePast">A Link to the Past (SNES)</a></small>
@@ -196,6 +196,7 @@
                 <small><a href="#SecretOfEvermore">Secret of Evermore (SNES)</a></small>
                 <small><a href="#Seedling">Seedling (Web)</a></small>
                 <small><a href="#SentinelsOfTheMultiverse">Sentinels of the Multiverse (PC / Physical)</a></small>
+                <small><a href="#Shapez">shapez (PC)</a></small>
                 <small><a href="#Shivers">Shivers (PC)</a></small>
                 <small><a href="#SlayTheSpire">Slay the Spire (PC)</a></small>
                 <small><a href="#SMZ3">SMZ3 (SNES)</a></small>
@@ -203,6 +204,7 @@
                 <small><a href="#SonicAdventureDX">Sonic Adventure DX (PC)</a></small>
                 <small><a href="#SoulBlazer">Soul Blazer (SNES)</a></small>
                 <small><a href="#Spelunker">Spelunker (NES)</a></small>
+                <small><a href="#Spelunky2">Spelunky 2 (PC)</a></small>
                 <small><a href="#Stacklands">Stacklands (PC)</a></small>
                 <small><a href="#StarWarsEpisode1Racer">Star Wars: Episode I Racer (PC)</a></small>
                 <small><a href="#Starcraft2">Starcraft 2 (PC)</a></small>
@@ -405,7 +407,6 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090815418731597884/1248797463054385152">Link</a>]</li>
                     <li><strong>Game Mods</strong> [<a href="https://github.com/BrandenEK/Blasphemous.Modding.Installer/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.ModdingAPI/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer.Multiworld/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer.MapTracker/releases">Link</a>] [<a href="https://github.com/BadMagic100/Blasphemous-PrieWarp/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.BootsOfPleading/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.DoubleJump/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Blasphemous/setup/en">Link</a>]</li>
@@ -640,7 +641,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doom-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%201993/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148329739996643348">Link</a>]</li>
@@ -650,7 +651,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/doomii-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/DOOM%20II/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236810487738510">Link</a>]</li>
@@ -718,7 +719,7 @@
                 <h3><span id="FinalFantasy6WorldsCollide"></span> Final Fantasy 6 Worlds Collide (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1254970630814830645">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1274462779213873192">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/TheBigSalarius/FF6-Worlds-Collide-EmoTracker-pack">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://docs.google.com/document/d/1ZN-eO3ZasTEAReGCRP7l9tgI-kEh0GG4gJxVv7JOlyk/edit#heading=h.1zborqwokvgu">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1022545979146252288">Link</a>]</li>
@@ -776,7 +777,7 @@
                 <h3><span id="FreddyFazbearsPizzeriaSimulator"></span> Freddy Fazbear's Pizzeria Simulator (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1272316993558679736">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1273742617133322260">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
@@ -791,8 +792,7 @@
                 <h3><span id="GrimDawn"></span> Grim Dawn (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/FarisTheAncient/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Game Mod</strong> [<a href="https://www.nexusmods.com/grimdawn/mods/167/">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1266462433497583667">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/routhken/Grim_Dawn_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discod thread [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1212473211820707901">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1114646643225137224">Link</a>]</li>
@@ -810,7 +810,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1254492943847391435">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1274462779213873192">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1228893356596265000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
@@ -830,7 +830,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> Version 1.0.3 [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Daivuk/apdoom/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Forsaken-angel/heretic-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Heretic/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236842515439627">Link</a>]</li>
@@ -1158,6 +1158,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/lilDavid/MetroidPrimeAP-PoptrackerPack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1172631093837570068">Link</a>]</li>
                 </ul>
@@ -1508,9 +1509,16 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Totox00/Archipelago-sotm/releases">Link</a>]</li>
-                    <li><strong>Client</strong> Rust program; Needs to be compiled from source [<a href="https://github.com/Totox00/ap-sotm-client/tree/dedicated-apworld">Link</a>]</li>
+                    <li><strong>Client</strong> [<a href="https://totox00.github.io/ap-sotm-client/index.html">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Totox00/Archipelago-sotm/blob/main/worlds/sotm/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241869295848521730">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Shapez"></span> shapez (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlastSlimey/shapezipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1259157584783478814">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Shivers"></span> Shivers (PC)</h3>
@@ -1576,6 +1584,14 @@
                     <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1237999589907234938">Link</a>]
                 </ul>
 
+                <h3><span id="Spelunky2"></span> Spelunky 2 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Eszenn/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://spelunky.fyi/mods/m/spelunky-2-archipelago/">Link</a>]</li>
+                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]
+                </ul>
+
                 <h3><span id="Stacklands"></span> Stacklands (PC)</h3>
 
                 <ul>
@@ -1627,8 +1643,8 @@
                 <h3><span id="Subversion"></span> Subversion (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
-                    <!-- <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1272558504695173132">Link</a>]</li> -->
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1257407054180782080">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1272558504695173132">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/studkid/subversion_ap_tracker/releases/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1160264628614484089">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1146853510378422272">Link</a>]</li>
                 </ul>
@@ -1695,9 +1711,8 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1252154307483009034">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1274570378164965420">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2922217554">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1252154307483009034">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SerpentAI/TerrariaAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Terraria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330488482767008">Link</a>]</li>
