--- a/apworlds.html
+++ b/apworlds.html
@@ -40,6 +40,7 @@
                 <header>
                     <h1 style="padding-top:20px">Archipelago News</h1>
                     <p>
+                        <a href="index.html">News</a><br />
                         <a href="apworlds.html">APWorlds</a><br /><br />
 
                         News Archive <a href="archive2024.html">2024</a>
