--- a/apworlds.html
+++ b/apworlds.html
@@ -1582,7 +1582,7 @@
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1237999589907234938/1239603025056763975">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/GirambQuamb/spelunker_archipelago_tracker/releases">Link</a>]</li>
-                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1237999589907234938">Link</a>]
+                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1237999589907234938">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Spelunky2"></span> Spelunky 2 (PC)</h3>
@@ -1590,7 +1590,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Eszenn/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://spelunky.fyi/mods/m/spelunky-2-archipelago/">Link</a>]</li>
-                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]
+                    <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Stacklands"></span> Stacklands (PC)</h3>
